# difusco_ddea

./: .gitignore  README.md  pyproject.toml
benchmarking/: benchmark_difusco_sampling.py  benchmark_difuscombination_sampling.py  benchmark_mis.py
src/cli_tools/: __main__.py
src/cli_tools/bash_scripts/: evo.sh  train.sh  train_difuscombination.sh
src/config/: config.py  myconfig.py  mytable.py
src/config/configs/: mis_inference.py  tsp_inference.py
src/data/: build_difuscombination_dataset.py  conditioning_exp_do.py  conditioning_exp_generate_samples.py  generate_difuscombination_samples.py  gurobi_solve_datasets.py  merge_parallel_generation_results.py  solve_difuscombination.py
src/difusco/: __main__.py  arg_parser.py  diffusion_schedulers.py  difusco.py  difusco_initialization_experiments.py  difusco_main.py  experiment_runner.py  gnn_encoder.py  lr_schedulers.py  nn_utils.py  pl_meta_model.py  sampler.py  train.py
src/difusco/mis/: generate_node_degree_labels.py  mis_dataset.py  pl_high_degree_model.py  pl_mis_base_model.py  utils.py  (+1 more)
src/difusco_edward_sun/: .gitignore  reproducing_scripts.md
src/difuscombination/: arg_parser.py  dataset.py  difuscombination_main.py  gnn_encoder_difuscombination.py  gurobi_optimal_recombination.py  pl_difuscombination_mis_model.py  recombination_experiments.py
src/ea/: __main__.py  arg_parser.py  config.py  ea_arg_parser.py  ea_runner.py  ea_utils.py  evolutionary_algorithm.py  generate_difuscombination_samples.py  mis.py  problem_instance.py  tsp.py
src/graph_transformers/: graph_transformer.py
src/mis-benchmark-framework/: do_the_lil_trick.sh
src/mis_benchmark_framework/: main.py
tests/: test_config.py  test_datasets.py  test_degree_selection_model.py  test_difusco_initialization_experiments.py  test_ea.py  test_ea_utils.py  test_evolutionary_algorithm.py  test_example_datasets.py  test_generate_node_degree_labels.py  test_gnn_encoder.py  test_loading_checkpoints.py  test_mis_ea.py  test_mis_model.py  test_mis_utils.py  test_numpy_heatmaps.py  test_sampler.py  test_table_saver.py  test_tsp_merge.py  test_tsp_model.py  test_tsp_utils.py
tests/difuscombination/: test_dataset.py  test_recombination_experiments.py
tests/ea/: test_ea_utils.py  test_mis_ea.py  test_tsp_ea.py
tests/mis/: test_dataset.py  test_gurobi_optimal_solve.py  test_mis_ea.py  test_mis_evaluation.py  test_mis_model.py
tests/resources/: test-heatmap-size50.npy  test-points-size50.npy  tsp50_example_dataset.txt  tsp50_example_dataset_two_samples.txt  tsp_merge_python.py
tests/tsp/: test_dataset.py  test_tsp_ea.py  test_tsp_evaluation.py  test_tsp_model.py  test_tsp_operators.py
(+90 files in other folders)
